--- a/index.html
+++ b/index.html
@@ -5,36 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>TIC TAC TOE GAME</title>
 </head>
 <body>
-    <div class="game-display flex">
+    <div class="display square">
         <h1>TIC TAC TOE</h1>
-        <div class="game-container flex">
-            <div class="container flex">
-                <div id="1" class="box"></div>
-                <div id="2" class="box"></div>
-                <div id="3" class="box"></div>
+        <div class="game-development square">
+            <div class="container square">
+                <div id="1" class="game"></div>
+                <div id="2" class="game"></div>
+                <div id="3" class="game"></div>
             </div>
-            <div class="container flex">
-                <div id="4" class="box"></div>
-                <div id="5" class="box"></div>
-                <div id="6" class="box"></div>
+            <div class="container square">
+                <div id="4" class="game"></div>
+                <div id="5" class="game"></div>
+                <div id="6" class="game"></div>
             </div>
-            <div class="container flex">
-                <div id="7" class="box"></div>
-                <div id="8" class="box"></div>
-                <div id="9" class="box"></div>
+            <div class="container square">
+                <div id="7" class="game"></div>
+                <div id="8" class="game"></div>
+                <div id="9" class="game"></div>
             </div>
         </div>
         <div>
-            <h3>Made by Kalvian ❤️</h3>
+            <h2>Made by Kalvian ❤️</h2>
         </div>
-        <div class="flex" id="result">
-            <div id="message"></div>
-            <div id="button">Play again</div>
-        </div>
+        
     </div>
-    <script src="./index.js"></script>
+    
 </body>
 </html>
